--- a/oap-stdlib/pom.xml
+++ b/oap-stdlib/pom.xml
@@ -121,5 +121,10 @@
             <artifactId>assertj-core</artifactId>
             <version>${assertj.version}</version>
         </dependency>
+        <dependency>
+            <groupId>net.jpountz.lz4</groupId>
+            <artifactId>lz4</artifactId>
+            <version>1.3.0</version>
+        </dependency>
     </dependencies>
 </project>
