--- a/oap-stdlib/pom.xml
+++ b/oap-stdlib/pom.xml
@@ -126,5 +126,10 @@
             <artifactId>lz4</artifactId>
             <version>1.3.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>${reflections.version}</version>
+        </dependency>
     </dependencies>
 </project>
