--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,7 @@
         <metrics.version>3.1.2</metrics.version>
         <jackson.version>2.7.1</jackson.version>
         <lombok.version>1.16.6</lombok.version>
+        <reflections.version>0.9.9-RC1</reflections.version>
     </properties>
 
     <build>
