--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <packaging>pom</packaging>
     <groupId>oap</groupId>
     <artifactId>oap</artifactId>
-    <version>1.15.8</version>
+    <version>1.15.7</version>
 
     <name>oap</name>
 
@@ -87,7 +87,7 @@
         <metrics.version>3.1.2</metrics.version>
         <jackson.version>2.7.1</jackson.version>
         <lombok.version>1.16.6</lombok.version>
-        <reflections.version>0.9.9-RC1</reflections.version>
+        <reflections.version>0.9.10</reflections.version>
     </properties>
 
     <build>
