--- a/oap-stdlib/pom.xml
+++ b/oap-stdlib/pom.xml
@@ -108,8 +108,7 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>com.google.
-                guava</groupId>
+            <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>${guava.version}</version>
         </dependency>
