--- a/oap-dictionary-maven/pom.xml
+++ b/oap-dictionary-maven/pom.xml
@@ -28,26 +28,54 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <name>oap-dictionary</name>
-    <artifactId>oap-dictionary</artifactId>
+    <name>oap-dictionary-maven-plugin</name>
+    <artifactId>oap-dictionary-maven-plugin</artifactId>
+
+    <packaging>maven-plugin</packaging>
 
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap</artifactId>
-        <version>1.16.0</version>
+        <version>1.15.29</version>
     </parent>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-plugin-plugin</artifactId>
+                <version>3.4</version>
+                <configuration>
+                    <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>mojo-descriptor</id>
+                        <phase>process-classes</phase>
+                        <goals>
+                            <goal>descriptor</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
         <dependency>
             <groupId>oap</groupId>
-            <artifactId>oap-json</artifactId>
-            <version>${project.parent.version}</version>
+            <artifactId>oap-dictionary</artifactId>
+            <version>1.15.29</version>
         </dependency>
-
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>${lombok.version}</version>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-plugin-api</artifactId>
+            <version>3.3.9</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven.plugin-tools</groupId>
+            <artifactId>maven-plugin-annotations</artifactId>
+            <version>3.4</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
