--- a/oap-alert/pom.xml
+++ b/oap-alert/pom.xml
@@ -33,7 +33,7 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap</artifactId>
-        <version>1.16.0</version>
+        <version>1.16.1</version>
     </parent>
 
 
@@ -41,7 +41,7 @@
         <dependency>
             <groupId>oap</groupId>
             <artifactId>oap-stdlib</artifactId>
-            <version>1.16.0</version>
+            <version>${project.parent.version}</version>
         </dependency>
 
         <dependency>
