--- a/maven/oap-dictionary-maven/pom.xml
+++ b/maven/oap-dictionary-maven/pom.xml
@@ -28,8 +28,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <name>oap-dictionary-maven-plugin</name>
-    <artifactId>oap-dictionary-maven-plugin</artifactId>
+    <name>oap-dictionary-maven</name>
+    <artifactId>oap-dictionary-maven</artifactId>
 
     <packaging>maven-plugin</packaging>
 
