--- a/oap-ws/src/main/resources/META-INF/oap-module.conf
+++ b/oap-ws/src/main/resources/META-INF/oap-module.conf
@@ -7,7 +7,7 @@
       parameters {
         server = "@service:oap-http-server"
         sessionManager = "@service:session-manager"
-        corsPolicy = "@service:corsPolicy-global"
+        globalCorsPolicy = "@service:corsPolicy-generic"
       }
       supervision {
         supervise = true
@@ -15,7 +15,7 @@
       dependsOn = [session-manager, corsPolicy-global, corsPolicy-subdomain]
     }
 
-    corsPolicy-global {
+    corsPolicy-generic {
       implementation = oap.http.cors.GenericCorsPolicy
       parameters {
         allowOrigin = "*";
