--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap.maven</artifactId>
-        <version>1.0.3</version>
+        <version>1.0.6</version>
     </parent>
 
     <packaging>pom</packaging>
@@ -78,7 +78,7 @@
         <oap.deps.micrometer.version>1.3.2</oap.deps.micrometer.version>
         <oap.deps.mockito.version>2.0.2-beta</oap.deps.mockito.version>
         <oap.deps.apache.lang.version>3.9</oap.deps.apache.lang.version>
-        <oap.deps.fastutil.version>8.3.0</oap.deps.fastutil.version>
+        <oap.deps.fastutil.version>8.3.1</oap.deps.fastutil.version>
         <oap.deps.quartz.version>2.3.2</oap.deps.quartz.version>
         <oap.deps.plexus-utils.version>3.3.0</oap.deps.plexus-utils.version>
         <oap.deps.apache.io.version>2.6</oap.deps.apache.io.version>
@@ -98,5 +98,6 @@
         <oap.deps.aws-java-sdk.version>1.11.683</oap.deps.aws-java-sdk.version>
         <oap.deps.s3mock.version>0.2.5</oap.deps.s3mock.version>
         <oap.deps.slack-api.version>v1.2.0.RELEASE</oap.deps.slack-api.version>
+        <oap.deps.disruptor.version>1.2.15</oap.deps.disruptor.version>
     </properties>
 </project>
